--- a/about_data.Rmd
+++ b/about_data.Rmd
@@ -62,7 +62,7 @@ The cleaning code is below:
 
 ```{r cleaning}
 # -----------------------------
-# 1. 删除无用的变量（高 NA 垃圾变量）
+# 1. Delete Variables
 # -----------------------------
 
 cols_to_drop <- c(
@@ -80,35 +80,35 @@ mvc_clean <- mvc_raw %>%
   select(-all_of(cols_to_drop))
 
 # -----------------------------
-# 2. 删除关键 NA 行
+# 2. Delete NA value
 # -----------------------------
 mvc_clean <- mvc_clean %>%
   
-  # 经纬度缺失 → 必删（无法分析位置）
+  # Latitude
   filter(!is.na(latitude),
          !is.na(longitude)) %>%
   
-  # 核心字段不能 NA
+  # NA
   filter(!is.na(crash_date),
          !is.na(crash_time)) %>%
   
-  # 伤亡极少 NA → 安全删除
+  # Injure & Killed
   filter(!is.na(number_of_persons_injured),
          !is.na(number_of_persons_killed))
 
 # -----------------------------
-# 3. 转换日期/时间格式
+# 3. Pivot time
 # -----------------------------
 mvc_clean <- mvc_clean %>%
   mutate(
-    crash_date = mdy(crash_date),      # 你的格式为 "MM/DD/YYYY"
+    crash_date = mdy(crash_date),      
     crash_year = year(crash_date),
     crash_month = floor_date(crash_date, "month"),
     crash_time = as_hms(crash_time)
   )
 
 # -----------------------------
-# 4. 补充几个衍生变量（可选）
+# 4. supplement variables
 # -----------------------------
 mvc_clean <- mvc_clean %>%
   mutate(
@@ -170,6 +170,26 @@ The cleaned dataset includes the following fields:
 These variables form the basis for exploratory analyses, mapping, and modeling presented in later sections.
 
 ---
+
+# Supplement Data 
+
+## **NYC Traffic Volume **  
+- **Source:** NYC Open Data
+- **Link:** https://data.cityofnewyork.us/Transportation/Automated-Traffic-Volume-Counts/7ym2-wayt/about_data
+- **Description:**  
+  Hourly traffic counts from NYC Department of Transportation traffic sensors.  
+  These data help contextualize collision rates by describing **exposure**, i.e., periods of heavier or lighter road usage.
+
+Examples of variables include:
+- Sensor ID  
+- Borough  
+- Hourly vehicle counts  
+- Roadway type  
+
+This dataset is used to explore whether **higher traffic volume** corresponds to increased collision frequency.
+
+---
+
 
 # Notes
 
