--- a/report.Rmd
+++ b/report.Rmd
@@ -44,7 +44,7 @@ To guide our analysis, we focus on the following research questions:
 - Which factors are associated with injuries or severe outcomes?
 
 # Data
-The dataset used in this project is the Motor Vehicle Collisions – Crashes dataset available on NYC Open Data. This dataset contains detailed, police-reported information on every recorded motor vehicle collision in New York City, including the crash date and time, borough, geographic coordinates, the number of persons injured or killed, contributing factors, and the types of vehicles involved. The raw file consists of hundreds of thousands of observations with dozens of variables, providing a comprehensive city-wide view of collision events across the five boroughs. For our analysis, we cleaned and standardized the data by converting timestamps, extracting the hour of day, harmonizing categorical variables, and removing rows with missing or invalid entries such as unavailable borough or coordinates. These preprocessing steps produced a structured and consistent dataset suitable for exploring temporal and spatial patterns and for modeling environmental and contextual factors associated with collision severity.
+The primary dataset used in this project is the Motor Vehicle Collisions – Crashes dataset from NYC Open Data, which provides detailed, police-reported information for each crash, including date and time, borough, geographic coordinates, injury and fatality counts, contributing factors, and vehicle types. To provide context on traffic exposure, we also reference the NYC Automated Traffic Volume Counts dataset, which contains hourly vehicle counts collected by Department of Transportation roadway sensors. Together, these datasets allow us to examine collision patterns alongside roadway usage. For analysis, we cleaned and standardized the collision data by converting timestamps, extracting relevant temporal features, harmonizing categorical variables, and removing entries with missing boroughs or invalid coordinates, resulting in a structured dataset suitable for exploring spatial, temporal, and contextual factors related to collision severity.
 
 # Exploratory Analysis
 ## Spatial Overview
@@ -345,6 +345,9 @@ mvc_model |>
 ```
 
 Residual diagnostic plots reveal clear differences in model adequacy between the linear and Poisson regressions. The linear model shows strong heteroskedasticity, with residuals tightly clustered near zero for low fitted values but spreading widely as fitted values increase, indicating violation of constant variance and non-normal error assumptions. In contrast, the Poisson model exhibits a more stable residual pattern, with residuals remaining centered around zero and displaying variance patterns more consistent with count data. Although some dispersion remains, the Poisson model aligns substantially better with the underlying distribution of injuries, supporting its use as the preferred model for this outcome.
+
+# Correlation
+We also conducted a correlation analysis and found that traffic volume has only a very weak linear association with crash counts in New York City. Citywide, the correlation between hourly traffic volume and collisions is approximately r ≈ 0.10, suggesting that higher-volume periods tend to experience slightly more crashes, but the relationship is minimal and explains very little of the variation in crash frequency. When examining boroughs individually, correlations remain weak across all areas—ranging from essentially no relationship in Staten Island (r ≈ 0.02) to slightly stronger but still weak associations in Queens, the Bronx, and Manhattan (generally r ≈ 0.07–0.16). These findings indicate that traffic volume alone is insufficient to explain spatial or temporal crash patterns, and that other factors—such as road design, intersection characteristics, and driver behavior—likely play a much more substantial role in shaping collision risk.
 
 # Discussion
 First, the temporal analyses consistently show strong daily and weekly patterns. Crashes peak during the morning and especially the evening commute, with Friday exhibiting the highest weekly counts. Late-night and early-morning hours display markedly lower activity. These results confirm that collision risk is closely aligned with predictable mobility cycles and traffic density.
