--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,16 @@ output: html_document
 
 ---
 
+<center>
+<iframe width="700" height="395"
+        src="https://www.youtube.com/embed/88ZRlBsbUZk"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
+</center>
+
+
 ## Overview
 
 Motor vehicle collisions (MVCs) represent a major public safety issue in New York City.
